# wgu-capstone-jupyter-notebook

./: README.md  Untitled1.html  pyproject.toml  searchindex.js
task-2/: _toc.yml
task-2/_build/.doctrees/: Untitled1.doctree  environment.pickle  intro.doctree  markdown-notebooks.doctree  markdown.doctree  notebooks.doctree
task-2/_build/html/: .buildinfo  genindex.html  intro.html  notebooks.html  objects.inv  search.html  searchindex.js
task-2/_build/html/_sources/: Untitled1.ipynb
task-2/_build/jupyter_execute/: Untitled1.ipynb  markdown-notebooks.ipynb  notebooks.ipynb
