[tool.poetry]
name = "wgu-capstone-jupyter-notebook"
version = "0.1.0"
description = ""
authors = ["Shady <drsheko91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter-book = "^1.0.3"
numpy = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
ipywidgets = "^8.1.5"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
